Adjusted CSS for better layout on mobile

--- a/frontend/src/components/ComunityContent/ComunityContent.module.css
+++ b/frontend/src/components/ComunityContent/ComunityContent.module.css
@@ -46,6 +46,6 @@
 .control {
   margin-top: calc(var(--mantine-spacing-xl) * 1.5);
   @media (max-width: $mantine-breakpoint-sm) {
-    width: 100%;
+    width: 50px;
   }
 }
