--- a/frontend/src/components/LogIn/LogIn.css
+++ b/frontend/src/components/LogIn/LogIn.css
@@ -6,6 +6,9 @@
   margin-top: auto;
   background-color: white;
   border-radius: 10px;
+  @media (max-width: $mantine-breakpoint-xs) {
+    margin: 10px;
+  }
 }
 .su-form-component {
   margin-top: 20px;
