--- a/frontend/src/components/Header/HeaderMegaMenu.module.css
+++ b/frontend/src/components/Header/HeaderMegaMenu.module.css
@@ -13,6 +13,7 @@
   padding-left: var(--mantine-spacing-md);
   padding-right: var(--mantine-spacing-md);
   text-decoration: none;
+  margin-right: 10px;
   color: light-dark(var(--mantine-color-black), var(--mantine-color-white));
   font-weight: 500;
   font-size: 15px;
