--- a/frontend/src/components/LogIn/LogIn.css
+++ b/frontend/src/components/LogIn/LogIn.css
@@ -4,7 +4,9 @@
   height: 270px;
   margin: auto;
   margin-top: auto;
-  background-color: white;
+
+  background-color: #fbfaf8;
+  background-image: url(https://findall.qodeinteractive.com/wp-content/uploads/2019/08/landing-background.jpg);
   border-radius: 10px;
   @media (max-width: $mantine-breakpoint-xs) {
     margin: 10px;
