--- a/frontend/src/components/CommCard/CommCard.module.css
+++ b/frontend/src/components/CommCard/CommCard.module.css
@@ -13,7 +13,7 @@
   &::after {
     content: "";
     display: block;
-    background-color: #f6cd4b;
+    background-color: #d4a480;
     width: rem(45px);
     height: rem(2px);
     margin-top: var(--mantine-spacing-sm);
