--- a/frontend/src/components/BlogSinglePage/SinglePageText.module.css
+++ b/frontend/src/components/BlogSinglePage/SinglePageText.module.css
@@ -1,32 +1,36 @@
-.wrapper {
-  width: 900px;
-  height: auto;
-
-  box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
-  border-radius: 10px;
-  padding-top: 10px;
-  margin-left: 20px;
-  @media (max-width: $mantine-breakpoint-sm) {
-    width: auto;
-  }
+.containerBlogs {
+  position: relative;
+  width: 100%;
+  padding: 20px;
 }
 
-.title {
-  text-align: center;
-  font-weight: 800;
-  font-size: rem(40px);
-  letter-spacing: -1px;
-  color: light-dark(var(--mantine-color-black), var(--mantine-color-white));
-  margin-bottom: var(--mantine-spacing-xs);
-  padding-bottom: 20px;
-  @media (max-width: $mantine-breakpoint-xs) {
-    font-size: rem(28px);
-    text-align: left;
-  }
+.containerBlogs::before {
+  content: "";
+  background-color:#eaf3e2;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+}
+
+.title{
+  text-align: left;
+}
+
+.img {
+  width: 100%;
+  max-width: 900px;
+  height: 300px;
+  object-fit: cover;
+  object-position: center;
+  display: block;
+  margin: 20px 0;
 }
 
 .description {
-  text-align: center;
+ 
   @media (max-width: $mantine-breakpoint-xs) {
     text-align: left;
     font-size: var(--mantine-font-size-md);
