--- a/frontend/src/components/Card/CardPage.module.css
+++ b/frontend/src/components/Card/CardPage.module.css
@@ -1,6 +1,7 @@
+
 .card {
   width: 400px;
-  height: 450px;
+  height: 380px;
   margin-left: 20px;
   position: relative;
   background-color: var(--mantine-color-body);
@@ -10,12 +11,22 @@
     margin: 15px;
   }
 }
+.containerBlogs {
+  background:#eaf3e2;
+  background-image: none;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh; 
+  width: 100%; 
+  padding: 20px;
+}
 .card:hover {
   transform: scale(1.1);
 }
 .card-container {
   margin: auto;
-  background-color: gray;
+  background-color: white;
 }
 .rating {
   position: absolute;
