--- a/frontend/src/components/DetaliiCont/DetaliiCont.css
+++ b/frontend/src/components/DetaliiCont/DetaliiCont.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  margin-top: 80px;
 }
 .profile-container {
   width: 400px;
@@ -75,3 +76,5 @@
   text-align: right;
   width: 100%;
 }
+
+
