--- a/frontend/src/components/Header/HeaderMegaMenu.module.css
+++ b/frontend/src/components/Header/HeaderMegaMenu.module.css
@@ -1,9 +1,13 @@
 .header {
+ position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
   height: rem(70px);
-
+  background-color: white; 
   padding-right: var(--mantine-spacing-md);
-  border-bottom: rem(1px) solid
-    light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
+  border-bottom: rem(1px) solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
 }
 
 .link {
