--- a/frontend/src/components/SignUp/SignUp.css
+++ b/frontend/src/components/SignUp/SignUp.css
@@ -1,7 +1,8 @@
 .background-container {
   width: auto;
   height: 680px;
-  margin-top: 0px;
+    margin-top: 50px;
+  padding-top: 30px;
   background-color: "#5a9e7c";
   display: flex;
   justify-content: center;
@@ -10,6 +11,7 @@
 }
 
 .form-container {
+  margin-top: 30px;
   padding-top: 2px;
   width: 400px;
   height: 500px;
